--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,10 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
     useLibrary 'org.apache.http.legacy'
-
     defaultConfig {
         applicationId "com.miguelmjro.appstore.pearstroe"
-        minSdkVersion 14
-        targetSdkVersion 24
+        minSdkVersion 20
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -18,15 +17,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient-android', version: '4.3.5.1'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'org.apache.httpcomponents:httpclient:4.5'
     compile 'com.android.support:support-v4:24.0.0'
     compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.android.support:support-v13:24.0.0'
 }
